# attachable_pkg

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: AttachModel.action
attachable_pkg/: actual_model.urdf  actual_model.xacro  mergeROSModels.py  test.py
launch/: robominerActionServer.launch.py
launch/other/: robominer.launch.py  robominerActionServerDemo.launch.py  robominerActionServerTest.launch.py  robominerStatePublisher.launch.py  robominerTest.launch.py  robominerXacro.launch.py  robominercontactsensor.launch.py
models/actual_model/: actual_model.urdf  actual_model.xacro  template.xacro  template_3.xacro
models/other/: myfirst.urdf  myfirst.xacro  myfirst2.urdf  myfirst2.xacro  urdfcreated.urdf  urdfcreated.xacro
models/rm2/rm2_sim/: model.sdf
models/rm2/rm2_sim2/: model.sdf  model_asdif.sdf
models/rm2_body/: model.sdf
models/urdf/: rm2_body.urdf  rm2_leg.urdf
models/vehicle/: model.sdf
models/xacro_files/: import_path.xacro  rm2_body.xacro  rm2_body_c_1.xacro  rm2_body_c_2.xacro  rm2_body_c_3.xacro  rm2_body_p.xacro  rm2_c_1.xacro  rm2_c_2.xacro  rm2_leg.xacro  rm2_leg_c_1.xacro  rm2_p.xacro
scripts/: rosActionServerMerger.py  rosActionServerTest.py
src/robot_state_publisher_dynamic/: robot_state_publisher_dynamic.cc  robot_state_publisher_dynamic.hh
worlds/: ground_world_2.sdf  ground_world_3.sdf  test_world.sdf  test_worldContactSensor.sdf  test_worldContactSensor2.sdf  test_worldContactSensor3.sdf  test_worldContactSensor_original.sdf
