<?xml version="1.0"?>

<package format="3">
  <name>attachable_pkg</name>
  <version>0.0.1</version>
  <description>AttachableJoint action server</description>
  <maintainer email="david.gutierrez.11.s@gmail.com">david</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>


  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- Citadel -->

  <exec_depend condition="$IGNITION_VERSION == citadel">ignition-gazebo3</exec_depend>
  <exec_depend condition="$IGNITION_VERSION == citadel">ignition-msgs5</exec_depend>
  <exec_depend condition="$IGNITION_VERSION == citadel">ignition-transport8</exec_depend>

  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
